Wed Sep 11 17:27:02 1996  Barry Jaspan  <bjaspan@mit.edu>

	* login.c: fix a security-threating race condition: chown'ing the
 	ccache to the user can be bad if the user can delete the file
 	first and make it a symlink to something else.  The solution is to
 	re-create the ccache after login as setuid() to the user.
	
Tue Sep 10 14:03:53 1996  Tom Yu  <tlyu@mit.edu>

	* klogind.M, kshd.M, login.M, rcp.M, rlogin.M, rsh.M: remove ".so
	 	man1/header.doc"

Fri Sep  6 13:22:46 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* login.M: Document that login_krb4_convert is off by default.

	* login.c: Turn login_krb4_convert off by default, since it causes
		problems if you don't have krb524d running on the KDC.
		This is necessary because a Solaris socket bug causes
		login to hang for 45 seconds if krb524d isn't present on
		the KDC.

Mon Sep  2 12:03:53 1996  Sam Hartman  <hartmans@mit.edu>

	* krlogind.c rlogin.c (v5_des_write): Write out length plus
 	encrypted data as one packet; this reduces latency by one RTT for
 	interactive traffic with kernels that support schemes similar to
 	RFC896, and reduces the number of packets with most other TCP
 	stacks.

Sat Aug 10 16:22:34 1996  Sam Hartman  <hartmans@mit.edu>

	* krcp.c (source): Cast stb.st_size to a long before printing it.
  	On NetBSD, it's a quad, so the following pointer is ignored and
 	all files look null.  We could special case NetBSD, but casting is
 	somewhat cleaner if we aren't dealing with 2g+ files.
e
Mon Jun 24 09:48:11 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* krsh.c (main): Fix typo so that krsh doesn't exit when using the
		default port.

Fri Jun 21 21:12:52 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in : Make sure it works with the built-in libkrb4.a again.

Fri Jun 14 13:19:30 1996  Sam Hartman  <hartmans@mit.edu>

	* login.c: Add define to deal with krb_save_credentials possibly
 	being called save_credentials, and to define krb_get_err_text if